<resources>
    <string name="app_name">MusicReviewer</string>
    <string name="category_genres">Your\nGenres</string>
    <string name="category_labels">Your\nLabels</string>
    <string name="category_suggestions">Suggested\nAlbums</string>
    <string name="category_request">Your\nRequest</string>
    <string name="genre_available">Available\nfor Request</string>
    <string name="genre_listen">Listen\nNow</string>
    <string name="genre_most_request">Most\nRequested</string>
    <string name="genre_previously">No More\nAvailable</string>
    <string name="rack_give_feedback">Give\nFeedback</string>
    <string name="rack_listen">Start\nListening</string>
    <string name="rack_feedback_sent">Feedback\nSent</string>
    <string name="rack_not_active">Not\nActive</string>
    <string name="sub_title">Sub Label</string>
    <string name="main_title">Label</string>
    <string name="band_name">Band or Artist name </string>
    <string name="album_title">Album Title</string>
    <string name="sub_genres_title">and related Sub Genres </string>
    <string name="genre_title">Genre</string>
    <string name="track_type_title">Remix/ Live vers./ ""/ </string>
    <string name="track_title">Track Title</string>
    <string name="sub_label_title">Major/Sub-Major/Indie/</string>
    <string name="label_title">Discographic Label Name</string>
    <string name="rack_text_view_explaination">Here the user take a look to his Approved and Reviewed Albums. Start Listening: approved Album ready to listen. Give Feedback: Listened Approved Albums ready to review. Feedback Sent: Albums already reviewed by user. Not Active: Albums no more or not yet available for a user review.</string>
    <string name="search_by_titles_or_bands">Search by Titles or Bands</string>
    <string name="search_icon">search_icon</string>
    <string name="dashboard_text_view_explaination">First Activity for an already Registered User. Here the user can take a look to the activities he can perform according to his settings and preferences. He can see Suggested Albums (recently added) according to his preferred genres, labels or band. Your Genres: user preferred music genres bring to a list of Albums by this selection. Your Labels: bring the user to a list of albums according to user fav labels. Your Request: Albums selected by the user. All activities give to the user a number of points that are expressed in a user Level (for example Reviewer) and in one or more badges. .</string>
    <string name="username">Username</string>
    <string name="reviewer">Reviewer</string>
    <string name="genre_text_view_explaination">Here the user can take a look to the Albums available according to one of his Favorite Genre. Available for Request: a selection of available albums that user could be interested to request. Listen Now: a selection of albums that are easily Approved by Labels. Most Requested: selection of Albums that many user have requested. No More Available: albums that are not more available for Request due to release date or other time restrictions. Each Tab include also a number of Albums available and a link to see them all</string>
    <string name="genre_name">Genre Name</string>
    <string name="genres">Genres</string>
    <string name="favorite_icon">favorite_icon</string>
    <string name="number">Number</string>
    <string name="total">Total</string>
    <string name="see_all">see all</string>
    <string name="label">Label</string>
    <string name="label_name">Label Name</string>
    <string name="label_text_view_explaination">Here the user can take a look to the Albums available according to one of his Favorite Label. Available for Request: a selection of available albums that user could be interested to request. Most Requested: selection of Albums that many user have requested. No More Available: albums that are not more available for Request due to release date or other time restrictions. Each Tab include also a number of Albums available and a link to see them all.</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="submit">submit</string>
    <string name="create_an_account">or CREATE AN ACCOUNT</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">password</string>
    <string name="username_mail">Username or E-mail</string>
    <string name="login_with_mail">Login with E-Mail</string>
    <string name="googleplus">Google+</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="login_with_socials">Login with Socials</string>
    <string name="login_text_view_explaination">From here user can login into the App. That could requires the use of Social Networks Authentication API and an user Database to verify users credentials</string>
    <string name="splash_image">splash image</string>
    <string name="slogan">Listen, Rate and Review</string>
    <string name="title">Music Reviewer</string>
    <string name="concept">Discover new music in Pre-Release</string>
    <string name="start_now_for_free">Start Now for FREE</string>
    <string name="profile_text_view_explaination">First Activity after first Social Login. Here all user informations and account settings can be edited and stored. Go to Settings: is suggested as next activities if user logged with Socials. Go to Dashboard: is suggested as next activities if user logged with mail.</string>
    <string name="user_image">user image</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">my-email@gmail.com</string>
    <string name="level">Level:</string>
    <string name="level_number">1</string>
    <string name="total_points">Total Points:</string>
    <string name="points_number">245</string>
    <string name="member_since_2017">Member Since 2017</string>
    <string name="reviewer_at">Reviewer at:</string>
    <string name="reviewer_where">Redjack (http://red-jack.blogspot.com/)</string>
    <string name="type_of_reviewer">Type of reviewer:</string>
    <string name="reviewer_type">Consumer Reviewer</string>
    <string name="feedback_ratio">Feedback Ratio:</string>
    <string name="ratio_feedback">50%</string>
    <string name="bio">Bio</string>
    <string name="bio_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sem nisi, tempus eu lacinia facilisis, laoreet ut lorem. Curabitur nulla est, tincidunt ac quam quis, tincidunt aliquam dui. Proin ut dui massa.</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="go_to_settings">Go to SETTINGS</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="basic_information">Basic Information</string>
    <string name="listening_preferences">Listening Preferences</string>
    <string name="badges_rewards">Badges + Rewards</string>
    <string name="additional_info">Additional info</string>
    <string name="account_information">Account Information</string>
    <string name="album_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sem nisi, tempus eu lacinia facilisis, laoreet ut lorem. Curabitur nulla est, tincidunt ac quam quis, tincidunt aliquam dui. Proin ut dui massa.</string>
    <string name="album_cover">Album cover</string>
    <string name="band">Band Name</string>
    <string name="release_date">Release Date:</string>
    <string name="date">21/08/2017</string>
    <string name="request">Request</string>
    <string name="description">Description</string>
    <string name="album_text_view_explaination">This Activity present the Pre-Release album information. When the user select an album this is where he arrives. Cd cover, title, band, Label and genre/s, as well as Release date and description are basic detail. A button to Request it complete the Activity. The Requested Album will be enlisted in Dashboard and Rack activities. When approved by Label, User can listen tracks in a new Activity.</string>
    <string name="what_appeals">What appeals to you about this Album? (Select all that apply.)</string>
    <string name="cover">Cover</string>
    <string name="reason4">I keep hearing about this Album!</string>
    <string name="reason3">Description</string>
    <string name="reason1">Band</string>
    <string name="reason2">Cover</string>
    <string name="send_request">Send Request</string>
    <string name="request_text_view_explainationy_e_mail_to_the_user">In this Activity, the user can select what appeals to him about the selected Album. When Request is sent, the Album is added to Dashboard (Your Request Tab). When approved the Album will be added to Your Albums Rack (Start Listening Tab). Approvation confirmation will be delivered by e-mail to the user</string>
    <string name="stop_button">stop button</string>
    <string name="step_backward">step backward</string>
    <string name="play_button">play button</string>
    <string name="step_forward_button">step forward button</string>
    <string name="volume_button">volume button</string>
    <string name="go_to_user_rack">go to user rack</string>
    <string name="reviewer_opinions">Reviewer Opinions</string>
    <string name="recommend_this_album">Would you recommend this Album?</string>
    <string name="interviews_events_etc">Are you interested in connecting with this Band (interviews, events, etc)?</string>
    <string name="purchase_this_album">Would you purchase this Album for yourself or a friend?</string>
    <string name="notes_for_the_label">Notes for the Label?</string>
    <string name="share_a_private_note_hint">Share a private note about the Album with the Label (but contact support for any file issues you are experiencing). Add your review in the section below.</string>
    <string name="send_opinions">Send Opinions</string>
    <string name="review_this_album">Review this Album</string>
    <string name="your_review_hint">Your review may be featured on this Album\'s MusicReviewer page! (Having trouble opening a file? Contact support instead.)</string>
    <string name="add_link_s">Add link(s)</string>
    <string name="link_or_links_here">If you posted your review online, please add the link (or links) here.</string>
    <string name="send_review">Send Review</string>
    <string name="reviewed_text_view_explaination">Here the user can take a look to his old Review and opinions. He can Edit,share and see his review.</string>
    <string name="archive_date">Archive Date:</string>
    <string name="your_opinions_mean_a_lot_thanks_for_sending">Your opinions mean a lot. Thanks for sending.</string>
    <string name="edit">Edit</string>
    <string name="saved_share">Saved! Share your review with your friends!</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="share_on_google">Share on Google+</string>
    <string name="see_your_review">See Your Review</string>
    <string name="user_rate_and_write">From this Activity the User can rate and write a review about the Album he listened.</string>
    <string name="playing_song_title">Playing Song Title</string>
    <string name="arrow_icon">arrow icon</string>
    <string name="settingstext_view_explaination">From here user can change personal profile informations, choose preferred music genres and devices in use, take a look on Badges and Rewards earned for his activities on the App and share them with friends on social networks, add details as contact info, birthday and more. He can then change password, mail account or completely delete the account.</string>
    <string name="played_time">Played Time</string>
    <string name="total_time">Total Time</string>
</resources>