<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="@dimen/padding_margin_1"
        android:text="@string/album_text_view_explaination"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/padding_margin_1"
        android:paddingStart="@dimen/padding_margin_1"
        android:paddingTop="@dimen/padding_margin_1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/album_cover"
            android:src="@drawable/nocover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding_margin_1"
            android:layout_marginStart="@dimen/padding_margin_1"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album_title"
                android:textSize="@dimen/font_24"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_1"
                android:text="@string/band"
                android:textSize="@dimen/font_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_1"
                android:text="@string/label_name"
                android:textSize="@dimen/font_20"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_1"
                android:gravity="bottom"
                android:text="@string/genres"
                android:textSize="@dimen/font_20"
                android:textStyle="italic" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/release_date_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/padding_margin_1"
            android:layout_marginStart="@dimen/padding_margin_1"
            android:text="@string/release_date"
            android:textSize="@dimen/font_20"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/date"
            android:textSize="@dimen/font_20"
            android:textStyle="italic" />

        <Button
            android:id="@+id/request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_margin_1"
            android:layout_marginRight="@dimen/padding_margin_1"
            android:layout_weight="1"
            android:text="@string/request" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_margin_1"
        android:text="@string/description"
        android:textSize="@dimen/font_24"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_margin_1"
        android:text="@string/album_description" />

</LinearLayout>