<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="16dp"
        android:background="@android:color/darker_gray"
    android:textColor="@android:color/white"
        android:text="@string/login_text_view_explaination"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_socials"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="24sp"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/facebook_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:drawableTop="@drawable/facebook2"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/twitter_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:drawableTop="@drawable/twitter2"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/googleplus_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/googleplus"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:drawableTop="@drawable/googleplus2"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_mail"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_mail"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="textMultiLine"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="textPassword"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity=""
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <CheckBox
                android:id="@+id/keepLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:text="@string/keep_me_logged_in"
                android:textColor="@android:color/white"
                tools:targetApi="lollipop"
                android:paddingLeft="8dp"
                android:paddingRight="16dp" />

            <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_an_account"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:onClick=""
                android:textColor="@android:color/holo_red_light"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>